Initialize rework